# Projet_JO

./: Athlete.cpp  Athlete.h  Athletisme.cpp  Athletisme.h  CMakeCache.txt  CMakeLists.txt  Initialisation_pays.h  Initialisation_sprinters.h  Makefile  Nage_libre.cpp  Nage_libre.h  Nageur.cpp  Nageur.h  Natation.cpp  Natation.h  Paris_2024_simulator  Pays.cpp  Pays.h  Rapport projet C.docx  Sport.cpp  Sport.h  Sportif.cpp  Sportif.h  Sprint_athle.cpp  Sprint_athle.h  Sprinter.cpp  Sprinter.h  cmake_install.cmake  interface.cpp  interface.h  main.cpp
